--- a/src/components/Container.module.css
+++ b/src/components/Container.module.css
@@ -2,17 +2,17 @@
   width: 700px;
   height: 500px;
   border-radius: 1rem;
-  background-color: #fcfeff;
+  background-color: var(--color-back);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
   overflow: hidden;
-  border: 1px solid #fcfeff;
+  border: 1px solid var(--color-back);
   box-shadow: 0px 11px 22px 0px rgba(144, 158, 190, 0.74);
   -webkit-box-shadow: 0px 11px 22px 0px rgba(144, 158, 190, 0.74);
   -moz-box-shadow: 0px 11px 22px 0px rgba(144, 158, 190, 0.74);
 }
 .container.dark {
-  background-color: #2c3339;
+  background-color: var(--color-back-dark);
 }
