--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,6 +1,6 @@
 .nav {
   box-sizing: border-box;
-  background-color: #99b0c8;
+  background-color: var(--color-bar);
   width: 100%;
   height: 4.5rem;
   display: flex;
@@ -10,9 +10,13 @@
   padding: 0 1rem;
 }
 .dark {
-  background-color: #242a30;
+  background-color: var(--color-bar-dark);
+}
+.icon {
+  cursor: pointer;
 }
 .category {
+  cursor: pointer;
   display: flex;
   flex-direction: row;
 }
@@ -20,9 +24,9 @@
   background-color: transparent;
   font-size: 1.25rem;
   margin-left: 0.7rem;
-  color: white;
+  color: var(--color-white);
 }
 
 .selected {
-  border-bottom: 2px solid white;
+  border-bottom: 2px solid var(--color-white);
 }
