--- a/src/components/Todolist.module.css
+++ b/src/components/Todolist.module.css
@@ -37,11 +37,19 @@ li {
 .title.dark {
   color: white;
 }
-.delete {
+.delete_cover {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: #b8c9da;
   border-radius: 50%;
   padding: 0.5rem;
+  width: 40px;
+  height: 40px;
 }
-.delete.dark {
+.delete_cover.dark {
   background-color: #9f9ec5;
+}
+.delete {
+  background-color: transparent;
 }
